# TND004

code(lab1)/: CMakeLists.txt  lab1.cpp
code(lab2)/: CMakeLists.txt  lab2.cpp  set.cpp  set.h
collisionsystem(lab3part1)/: CMakeLists.txt  README.md
collisionsystem(lab3part1)/data/: newton-pendulum.txt  standing-still.txt
collisionsystem(lab3part1)/include/particlesystem/: collisionsystem.h  event.h  priorityqueue-vector.h  priorityqueue.h
collisionsystem(lab3part1)/src/: lab3.cpp
collisionsystem(lab3part1)/src/particlesystem/: collisionsystem.cpp
detectionSystem(lab3part2)/: CMakeLists.txt  CMakePresets.json  README.md
detectionSystem(lab3part2)/data/: points1.txt
detectionSystem(lab3part2)/data/output/: segments-largeMystery.txt  segments-points1.txt  segments-points1423.txt  segments-points20.txt  segments-points5.txt  segments-points6.txt
detectionSystem(lab3part2)/data/output/line-segments/: line-segments-largeMystery.txt  line-segments-points1423.txt  line-segments-points5.txt  line-segments-points6.txt
detectionSystem(lab3part2)/data/output/lines-discovered/: lines-largeMystery.txt  lines-points1.txt  lines-points1423.txt  lines-points20.txt  lines-points200.txt  lines-points40.txt  lines-points5.txt  lines-points56.txt  lines-points6.txt  lines-points8.txt
detectionSystem(lab3part2)/linesdiscoverysystem/include/: find-patterns.hpp
detectionSystem(lab3part2)/linesdiscoverysystem/src/: find-patterns.cpp
detectionSystem(lab3part2)/renderingSystem/include/: readfiles.h  window.h
detectionSystem(lab3part2)/renderingSystem/src/: lab3-part2.cpp  readfiles.cpp  window.cpp
